# HADNX

./: LICENSE  README.md  pyproject.toml
aegisweb/: .env.example  requirements.txt
aegisweb/apps/reports/: admin.py  apps.py  models.py  serializers.py  views.py
aegisweb/apps/scanner/: admin.py  models.py  serializers.py  urls.py  views.py
aegisweb/apps/users/: serializers.py  urls.py  views.py
aegisweb/core/: urls.py
aegisweb/core/settings/: base.py  development.py
backend/: .env.example  .gitignore  backend_logs.txt  check_keys.py  diagnose_network.py  manage.py  requirements.txt
backend/apps/advanced_scanner/: access.py  apps.py  urls.py  views.py
backend/apps/compliance/: apps.py  report_generator.py  urls.py  views.py
backend/apps/reports/: urls.py  views.py
backend/apps/scanner/: __init__.py  apps.py  models.py  models.py_snippet  serializers.py  serializers.py_snippet  tasks.py  urls.py  views.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/core/: celery.py  permissions.py  urls.py  wsgi.py
frontend/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AIChatDrawer.tsx  ComplianceCards.tsx  CookieMatrix.tsx  ExportButtons.tsx  FixPanel.tsx  HeaderStatus.tsx  LockedFeature.tsx  RiskBadge.tsx  RiskCorrelation.tsx  ScanCard.tsx  ScanProgressOverlay.tsx  ScanTimeline.tsx  SidebarMenu.tsx  UpgradeCard.tsx
frontend/lib/: api.ts  useFeatureGate.tsx  utils.ts
hadnx/: __init__.py  cli.py
(+103 files in other folders)
